Fix date on IOS

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@
 input [type="date"] {
     min-width: 95%;
     width: 100%;
+    -webkit-appearance: none;
 }
 
 .form__button {
